# autogen

./: .gitignore  pyproject.toml
autogen/sfdc/: completion.py  utils.py
lib/: llm_gateway_client-1.0.0-py3-none-any.whl
test/sfdc/: test_completion.py
