[metadata]
license_file = "LICENSE"
description-file = "README.md"

[tool.poetry]
name = "autogen"
version = "0.1.14"
description = "Enabling Next-Gen LLM Applications via Multi-Agent Conversation Framework"
readme = "README.md"
authors = ["AutoGen <auto-gen@outlook.com>"]
packages = [
  { include = "autogen" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
openai = "^0.28.1"
diskcache = "^5.6.3"
termcolor = "^2.3.0"
flaml = "^2.1.1"
python-dotenv = "^1.0.0"
llm-gateway-client = { file = "lib/llm_gateway_client-1.0.0-py3-none-any.whl" }

[tool.poetry.extras]
blendsearch = ["flaml"]
mathchat = ["sympy", "pydantic", "wolframalpha"]
retrievechat = ["chromadb", "tiktoken", "sentence_transformers", "pypdf", "ipython"]
teachable = ["chromadb"]

[tool.poetry.group.test.dependencies]
chromadb = "^0.4.15"
lancedb = "^0.3.3"
coverage = "^7.3.2"
datasets = "^2.14.6"
ipykernel = "^6.26.0"
nbconvert = "^7.10.0"
nbformat = "^5.9.2"
pre-commit = "^3.5.0"
pytest-asyncio = "^0.21.1"
sympy = "^1.12"
tiktoken = "^0.5.1"
wolframalpha = "^5.0.0"
pydantic = "1.10.9"
pytest = "~7.0.0"
qdrant-client = {version = "^1.6.4", extras = ["fastembed"]}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.8"
black = "^23.10.1"

[tool.pytest.ini_options]
addopts = '-m "not conda"'
markers = [
    "conda: test related to conda forge distribution"
]

[tool.black]
# https://github.com/psf/black
line-length = 120
exclude = "(.eggs|.git|.hg|.mypy_cache|.venv|_build|buck-out|build|dist)"


[tool.ruff]
line-length = 120
# Enable Pyflakes `E` and `F` codes by default.
select = [
    "E", "W",  # see: https://pypi.org/project/pycodestyle
    "F",  # see: https://pypi.org/project/pyflakes
#    "D",  # see: https://pypi.org/project/pydocstyle
#    "N",  # see: https://pypi.org/project/pep8-naming
#    "S",  # see: https://pypi.org/project/flake8-bandit
]
ignore = [
    "E501",
    "F401",
    "F403",
    "C901",
]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs"
]
ignore-init-module-imports = true
unfixable = ["F401"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
